Fix title spacing

--- a/src/components/Title/styles.module.scss
+++ b/src/components/Title/styles.module.scss
@@ -5,6 +5,5 @@
 .title {
   @include title;
 
-  margin-bottom: $spacing-xl;
   word-break: break-word;
 }
