--- a/src/pages/Public/LogIn/LogInForm/styles.module.scss
+++ b/src/pages/Public/LogIn/LogInForm/styles.module.scss
@@ -12,6 +12,10 @@
   }
 }
 
+.title {
+  margin-bottom: $spacing-xl;
+}
+
 .formContainer {
   display: flex;
   flex-direction: column;
